# backend-lab

fastapi-k8s/: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi-k8s/app/: config.py  database.py  models.py  server.py
fastapi-k8s/app/api/: book.py
fastapi-k8s/fastapi_k8s/: database.py  dtos.py  models.py  server.py
fastapi-k8s/fastapi_k8s/api/: book.py
fastapi-k8s/k8s/: database-deployment.yml  database-secrets.yml  database-svc.yml  migration-job.yml  persistent-volume.yml  rest-deployment.yml  rest-secrets.yml  rest-svc.yml
