[tool.poetry]
name = "fastapi-k8s"
version = "0.1.0"
description = ""
authors = ["Matheus Oliveira da Silva <matheus.oliveira.s@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlmodel = "^0.0.22"
uuid = "^1.30"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
